# lcs_rs

./: .gitignore  Cargo.toml  README.md  justfile
java_implementation/: RecherchePLSSC.java
src/: lib.rs  main.rs  test_format.rs
tests/: adn-10-10.test  adn-100-100.test  adn-10000-10000.test  adn-12-12.test  adn-1200-1200.test  adn-150-150.test  adn-15000-15000.test  adn-16-16.test  adn-1600-1600.test  adn-18-18.test  adn-20-20.test  adn-200-200.test  adn-2000-2000.test  adn-22-22.test  adn-24-24.test  adn-26-26.test  adn-28-28.test  adn-30-30.test  adn-300-300.test  adn-3000-3000.test  adn-40-40.test  adn-50-50.test  adn-500-500.test  adn-5000-5000.test  adn-7000-7000.test  adn-800-800.test  alphabet-10-10.test  alphabet-10-20.test  alphabet-12-14.test  alphabet-20-20.test  alphabet-200-200.test  alphabet-400-400.test  alphabet-800-800.test  example-td.test
